--- a/app-produtividade/package.json
+++ b/app-produtividade/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@icon/ionicons": "^5.4.0-alpha.0",
+    "@ionic/react": "^8.5.8",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "chart.js": "^4.4.9",
+    "ionicons": "^8.0.9",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
