--- a/app-produtividade/package.json
+++ b/app-produtividade/package.json
@@ -13,8 +13,11 @@
     "@emotion/styled": "^11.14.0",
     "@icon/ionicons": "^5.4.0-alpha.0",
     "@ionic/react": "^8.5.8",
+    "@ionic/react-router": "^8.5.8",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@stencil/core": "^4.32.0",
+    "@stencil/react-output-target": "^1.0.3",
     "chart.js": "^4.4.9",
     "ionicons": "^8.0.9",
     "next": "15.3.3",
